# langgraph_practice

./: pyproject.toml
10_multi_agent_architecture/: 1_subgraphs.ipynb  2_supervisor_multiagent_workflow.ipynb  2_supervisor_multiagent_workflow.ipynb:Zone.Identifier
1_Introduction/: react_agent_basic.py
2_basic_reflection_system/: chains.py
3_structured_outputs/: types.ipynb
4_reflexion_agent_system/: chains.py  execute_tools.py
6_react_agent/: agent_reason_runnable.py  nodes.py  react_graph.py
7_chatbot/: 1_basic_example.ipynb  1_basic_example.py
8_human-in-the-loop/: 4_approval.ipynb  6_multi_turn_conversation.ipynb  6_multi_turn_conversation.py
9_RAG_agent/: 1_basic.ipynb
