[project]
name = "langgraph-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.18",
    "langchain-community==0.3.17",
    "langchain-core==0.3.45",
    "langchain-openai==0.3.5",
    "langchain-google-genai==2.0.9",
    "langchain-groq==0.2.5",
    "langchain-text-splitters==0.3.6",
    "langgraph==0.3.21",
    "langgraph-sdk==0.1.51",
    "langgraph-checkpoint==2.0.21",
    "langgraph-checkpoint-sqlite==2.0.6",
    "langgraph-prebuilt==0.1.7",
    "langsmith==0.3.7",
    "openai==1.62.0",
    "google-api-python-client==2.160.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.4",
    "python-dotenv==1.0.1",
    "tiktoken==0.8.0",
    "aiohttp==3.11.12",
    "httpx==0.28.1",
    "requests==2.32.3",
    "dataclasses-json==0.6.7",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "SQLAlchemy==2.0.38",
    "orjson==3.10.15",
    "grandalf>=0.8",
    "ipython>=9.3.0",
    "ipykernel>=6.29.5",
    "sentence-transformers>=5.0.0",
    "langchain-huggingface>=0.1.2",
]
